apps/prometheus/templates/prometheus-vs.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: prometheus-vs
  namespace: monitoring
spec:
  gateways:
  - istio-system/internal-gateway
  hosts:
  - "prometheus.internal"
  - "prometheus.jiun2-internal.net"
  http:
  - route:
    - destination:
        host: kube-prometheus-stack-prometheus.monitoring.svc.cluster.local
        port:
          number: 9090
